--- a/media/main.css
+++ b/media/main.css
@@ -10,3 +10,16 @@ textarea {
 	font-size: var(--vscode-editor-font-size);
 	font-family: var(--vscode-editor-font-family);
 }
+
+
+.user-message {
+	font-size: var(--vscode-editor-font-size);
+	font-family: var(--vscode-editor-font-family);
+	background-color: var(--vscode-input-background);
+}
+
+.assistant-message {
+	font-size: var(--vscode-editor-font-size);
+	font-family: var(--vscode-editor-font-family);
+	background-color: var(--vscode-editor-background);
+}
