--- a/media/vscode.css
+++ b/media/vscode.css
@@ -61,6 +61,7 @@ button {
   outline-offset: 2px !important;
   color: var(--vscode-button-foreground);
   background: var(--vscode-button-background);
+  margin: 2.5px 2.5px 2.5px 2.5px;
 }
 
 button:hover {
