feat: add basic recipe view and hook it up (#160)
- Review with https://github.com/sourcery-ai/core/pull/2723
- Make chat text area show up at the bottom of the window
- Add a recipe view to the sidebar
- Generate the buttons from a list sent from the binary
- Hook these up to send messages - at the moment they just send a basic
message through the same chat API

--- a/media/chat.css
+++ b/media/chat.css
@@ -2,7 +2,7 @@
 .sidebar__section-container {
   transition: all 0.3s ease;
   overflow: auto;
-  max-height: 70vh;
+  max-height: 85vh;
 }
 
 .sidebar__section-container.is-opening {
@@ -190,8 +190,9 @@
   border-bottom: 1px solid var(--vscode-sideBar-border);
   padding: var(--spacing-md);
   background-color: var(--vscode-sideBar-background);
-  position: sticky;
+  position: absolute;
   bottom: -1px;
+  width: 100%;
 }
 
 .sidebar__chat-assistant--textarea-container {
