--- a/media/chat.css
+++ b/media/chat.css
@@ -3,6 +3,9 @@
   transition: all 0.3s ease;
   overflow: auto;
   flex-grow: 1;
+  background-color: var(--vscode-sideBar-background);
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .sidebar__section-container:not(.active) {
@@ -236,6 +239,30 @@
   background-color: var(--vscode-sideBar-background);
   flex-shrink: 0;
   flex-grow: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.sidebar__chat-assistant--cancel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--spacing-xxs);
+  margin-bottom: var(--spacing-xs);
+  outline: none;
+  background-color: transparent;
+  color: var(--vscode-button-secondaryForeground);
+}
+
+.sidebar__chat-assistant--cancel-button:hover {
+  background-color: transparent;
+  opacity: 0.8;
+}
+
+.sidebar__chat-assistant--regenerate-button-icon {
+    fill: var(--vscode-button-secondaryForeground);
+    width: var(--spacing-lg);
+    margin-right: var(--spacing-xs);
 }
 
 .sidebar__chat-assistant--textarea-container {
@@ -246,7 +273,7 @@
   font-weight: var(--vscode-font-weight);
   font-size: var(--vscode-font-size);
   border-radius: var(--spacing-xxs);
-  background-color: var(--vscode-sideBar-dropBackground);
+  background-color: var(--vscode-editor-background);
   padding-right: 3rem;
   outline: 1px solid transparent;
   resize: none;
