fix: update titles, lists, and code blocks

--- a/media/chat.css
+++ b/media/chat.css
@@ -108,13 +108,19 @@
 }
 
 .sidebar__chat-assistant--chat-bubble-text :is(h1, h2, h3, h4, h5, h6) {
-  margin-top: 0.5em;
   font-size: 1em;
   font-weight: bold;
 }
 
+
+.sidebar__chat-assistant--chat-bubble-text :is(h1, h2, h3, h4, h5, h6):not(:first-child) {
+  margin-top: var(--spacing-md);
+}
+
+
+
 .sidebar__chat-assistant--chat-bubble-text :is(ol, ul) {
-  padding-left: 1.5em;
+  margin-left: 1.5em;
 }
 
 .sidebar__chat-assistant--chat-bubble-text li {
@@ -131,11 +137,15 @@
 }
 
 .sidebar__chat-assistant--chat-bubble-text pre {
-  background-color: var(--vscode-editor-background);
   margin: 0;
-  border-radius: var(--spacing-xs);
   overflow-x: auto;
   width: 100%;
+  background-color: var(--vscode-editor-background);
+  border: 1px solid var(--vscode-panel-border);
+  border-radius: var(--spacing-xs);
+}
+
+.sidebar__chat-assistant--chat-bubble-text pre code {
 }
 
 .sidebar__chat-assistant--code-block {
@@ -270,12 +280,13 @@
   border-radius: var(--spacing-xxs);
   margin-bottom: var(--spacing-xs);
   outline: none;
-  background-color: var(--vscode-button-secondaryBackground);
-  color: var(--vscode-button-secondaryForeground);
+  background-color: transparent;
+  color: var(--vscode-foreground);
 }
 
 .sidebar__chat-assistant--cancel-button:hover {
-  background-color: var(--vscode-button-secondaryHoverBackground);
+  background-color: transparent;
+  opacity: 0.8;
 }
 
 .sidebar__chat-assistant--cancel-button:disabled {
@@ -284,11 +295,12 @@
 }
 
 .sidebar__chat-assistant--cancel-button:hover:disabled {
-  background-color: var(--vscode-button-secondaryBackground);
+  background-color: transparent;
+  opacity: 1;
 }
 
 .sidebar__chat-assistant--regenerate-button-icon {
-  fill: var(--vscode-button-secondaryForeground);
+  fill: var(--vscode-foreground);
   width: var(--spacing-lg);
   margin-right: var(--spacing-xs);
 }
