--- a/media/chat.css
+++ b/media/chat.css
@@ -164,17 +164,18 @@
   right: var(--spacing-sm);
 }
 
-.sidebar__chat-assistant--chat-bubble-text--code-action-buttons .sidebar__chat-assistant--chat-bubble-text--code-action-button:first-of-type {
+.sidebar__chat-assistant--chat-bubble-text--code-action-buttons
+  .sidebar__chat-assistant--chat-bubble-text--code-action-button:first-of-type {
   border-top-left-radius: var(--spacing-xxs);
   border-bottom-left-radius: var(--spacing-xxs);
 }
 
-.sidebar__chat-assistant--chat-bubble-text--code-action-buttons .sidebar__chat-assistant--chat-bubble-text--code-action-button:last-of-type {
+.sidebar__chat-assistant--chat-bubble-text--code-action-buttons
+  .sidebar__chat-assistant--chat-bubble-text--code-action-button:last-of-type {
   border-top-right-radius: var(--spacing-xxs);
   border-bottom-right-radius: var(--spacing-xxs);
   border-left: none;
 }
-
 
 button.sidebar__chat-assistant--chat-bubble-text--code-action-button {
   position: relative;
