--- a/media/troubleshooting.css
+++ b/media/troubleshooting.css
@@ -79,6 +79,12 @@
 }
 
 .troubleshooting__message--error {
-  margin-right: var(--spacing-lg);
   background: var(--vscode-inputValidation-errorBackground);
+  border: var(--vscode-inputValidation-errorBorder);
 }
+
+.troubleshooting__message--warning {
+  background: var(--vscode-inputValidation-warningBackground);
+  border: var(--vscode-inputValidation-warningBorder);
+}
+
