--- a/media/troubleshooting.css
+++ b/media/troubleshooting.css
@@ -1,9 +1,9 @@
 .troubleshooting {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   background-color: var(--vscode-sideBar-background);
   gap: 1px solid var(--vscode-sideBar-border);
-  padding: var(--spacing-md);
   height: 100%;
 }
 
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-sm);
+  padding: var(--spacing-lg);
 }
 
 .troubleshooting__input {
@@ -23,6 +24,16 @@
   flex-grow: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  padding: var(--spacing-lg);
+}
+
+.troubleshooting__input--hidden {
+  display: none;
+}
+
+.troubleshooting__footer {
+  flex-grow: 0;
+  padding: var(--spacing-lg);
 }
 
 .troubleshooting__prompt {
@@ -35,14 +46,14 @@
   resize: vertical;
 }
 
-.troubleshooting__send_button {
+.troubleshooting__button--submit {
   outline: none;
   border-radius: var(--spacing-xxs);
   font-size: var(--vscode-sidebar-font-size);
   transition: background-color 0.3s ease-in-out;
 }
 
-.troubleshooting__send_button--disabled {
+.troubleshooting__button--submit--disabled {
   pointer-events: none;
 }
 
@@ -88,3 +99,37 @@
   border: var(--vscode-inputValidation-warningBorder);
 }
 
+/* Components */
+
+.troubleshooting__button_group {
+  display: flex;
+  flex-direction: row;
+  border-radius: var(--spacing-sm);
+  overflow: hidden;
+}
+
+/* Markdown re-formatting */
+
+.troubleshooting__message > *:not(:last-child) {
+  margin-bottom: var(--spacing-md);
+}
+
+.troubleshooting__message :is(h1, h2, h3, h4, h5, h6) {
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.troubleshooting__message :is(h1, h2, h3, h4, h5, h6):not(:first-child) {
+  margin-top: var(--spacing-md)
+}
+
+.troubleshooting__message :is(ol, ul) {
+  margin-left: 1em;
+}
+
+.troubleshooting__message pre {
+  border-radius: var(--spacing-xs);
+  background-color: var(--vscode-editor-background);
+  outline: 1px solid var(--vscode-panel-border);
+  overflow: hidden;
+}
