--- a/media/troubleshooting.css
+++ b/media/troubleshooting.css
@@ -120,7 +120,7 @@
 }
 
 .troubleshooting__message :is(h1, h2, h3, h4, h5, h6):not(:first-child) {
-  margin-top: var(--spacing-md)
+  margin-top: var(--spacing-md);
 }
 
 .troubleshooting__message :is(ol, ul) {
