--- a/media/troubleshooting.css
+++ b/media/troubleshooting.css
@@ -116,16 +116,26 @@
 
 .troubleshooting__message--running::after {
   display: inline-block;
-  animation: dotty steps(1,end) 1s infinite;
-  content: '';
+  animation: dotty steps(1, end) 1s infinite;
+  content: "";
 }
 
 @keyframes dotty {
-    0%   { content: ''; }
-    25%  { content: '.'; }
-    50%  { content: '..'; }
-    75%  { content: '...'; }
-    100% { content: ''; }
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "";
+  }
 }
 
 /* Components */
