--- a/media/troubleshooting.css
+++ b/media/troubleshooting.css
@@ -82,6 +82,7 @@
   border-radius: var(--spacing-sm);
   background-color: var(--vscode-settings-textInputBackground);
   padding: var(--spacing-md);
+  line-height: 150%;
 }
 
 .troubleshooting__message--user {
@@ -164,6 +165,10 @@
 
 .troubleshooting__message :is(ol, ul) {
   margin-left: 1em;
+}
+
+.troubleshooting__message a {
+  color: var(--vscode-foreground);
 }
 
 .troubleshooting__message pre {
