fix: add some corrected colours

--- a/media/ide-styles.css
+++ b/media/ide-styles.css
@@ -8,6 +8,8 @@
   --error: var(--vscode-inputValidation-errorBackground); /* error background */
   --disabled: var(--vscode-disabledForeground); /* disabled foreground */
   --border: var(--vscode-panel-border); /* border */
+  --primary: var(--vscode-button-background);
+  --highlight: orange;
 }
 
 html {
