--- a/media/ide-styles.css
+++ b/media/ide-styles.css
@@ -8,4 +8,6 @@
   --error: var(--vscode-inputValidation-errorBackground); /* error background */
   --disabled: var(--vscode-disabledForeground); /* disabled foreground */
   --border: var(--vscode-panel-border); /* border */
+  --primary: var(--vscode-button-background);
+  --highlight: orange;
 }
